--- a/package.json
+++ b/package.json
@@ -4,8 +4,21 @@
   "description": "Skeleton dapp",
   "main": "webpack.config.js",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "bignumber.js": "^4.1.0",
+    "oo7": "^0.5.6",
+    "oo7-parity": "^0.6.12",
+    "oo7-react": "^0.4.7",
+    "parity-reactive-ui": "^0.4.20",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.9.1"
   },
   "devDependencies": {
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
