--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "npm-install-webpack-plugin": "^4.0.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
